log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 11:32:54 PM UTC: 
 tests:  0|6
total_score: 0/70
c52dbb7
Wed 29 Mar 2023 11:54:36 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
27dd789
Wed 29 Mar 2023 11:56:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cbad84b
Wed 29 Mar 2023 11:58:48 PM UTC: 
 arraylist.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:29: error: too few arguments to function ‘calloc’
   16 |     array->data = (void **) calloc(sizeof(void**));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
8d4d8ca
Wed 29 Mar 2023 11:58:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
764e7c5
Fri 31 Mar 2023 05:39:39 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2d89383
Fri 31 Mar 2023 05:47:43 PM UTC: 
 arraylist.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|4
total_score: 20/70
ceb4a89
Fri 31 Mar 2023 05:56:58 PM UTC: 
 arraylist.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  3|4
total_score: 20/70
e4b233b
Fri 31 Mar 2023 05:57:34 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
8448dd5
Fri 31 Mar 2023 10:23:28 PM UTC: 
 arraylist.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:56:21: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   56 |     if(i > l->size) return;
      |                     ^~~~~~
arraylist.c:55:7: note: declared here
   55 | void* pop(ArrayList * l, int i){
      |       ^~~
arraylist.c:58:22: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   58 |     if(l->size == 0) return;
      |                      ^~~~~~
arraylist.c:55:7: note: declared here
   55 | void* pop(ArrayList * l, int i){
      |       ^~~
arraylist.c:62:11: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   62 |       i = size + i
      |           ^~~~
      |           dysize
arraylist.c:62:11: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:62:19: error: expected ‘;’ before ‘}’ token
   62 |       i = size + i
      |                   ^
      |                   ;
   63 |     }
      |     ~              
arraylist.c:65:9: error: ‘k’ undeclared (first use in this function)
   65 |     for(k = i ; k < size - 1 ; k++)
      |         ^
cc1: all warnings being treated as errors
Compilation failed
abec09f
Fri 31 Mar 2023 10:23:42 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:62:11: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   62 |       i = size + i
      |           ^~~~
      |           dysize
arraylist.c:62:11: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:62:19: error: expected ‘;’ before ‘}’ token
   62 |       i = size + i
      |                   ^
      |                   ;
   63 |     }
      |     ~              
arraylist.c:65:9: error: ‘k’ undeclared (first use in this function)
   65 |     for(k = i ; k < size - 1 ; k++)
      |         ^
arraylist.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c735aaa
Fri 31 Mar 2023 10:23:55 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:62:11: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   62 |       i = size + i;
      |           ^~~~
      |           dysize
arraylist.c:62:11: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d07a479
Fri 31 Mar 2023 10:24:16 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:62:11: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   62 |       i = size + i;
      |           ^~~~
      |           dysize
arraylist.c:62:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b847a9e
Fri 31 Mar 2023 10:24:33 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:65:25: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   65 |     for(int k = i ; k < size - 1 ; k++)
      |                         ^~~~
      |                         dysize
arraylist.c:65:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e6b9095
Fri 31 Mar 2023 10:24:45 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
6087aff
Fri 31 Mar 2023 10:26:43 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
4f3605d
Sat 01 Apr 2023 02:53:07 PM UTC: 
 arraylist.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:83:6: error: expected expression before ‘=’ token
   83 |     }=
      |      ^
arraylist.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4cebe8d
Sat 01 Apr 2023 02:53:21 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/70
e1a257b
Sat 01 Apr 2023 02:56:39 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
010777b
Sat 01 Apr 2023 02:58:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb40dcb
